--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -489,9 +489,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07651b45-8bc9-4ab3-8e7e-f8f63d46669c",
+   "metadata": {},
+   "source": [
+    "4. a. Write a function that takes the name of a file that contains song lyrics, loads the file, performs sentiment analysis, and returns the polarity score. Use this function to print the polarity scores (with the name of the song) of      the three files you created in question 3. b. Does the reported polarity match your understanding of the song's lyrics? Why or why not do you think that might be? Answer the questions in either a comment in the code cell or a            markdown cell under the code cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "49f35847-8b98-4aa9-835b-032bb597a927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity Score for 'hello_lyrics.json': 0.0\n",
+      "Polarity Score for 'love_story_lyrics.json': 0.0\n",
+      "Polarity Score for 'shape_of_you_lyrics.json': 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "import json\n",
+    "\n",
+    "# Initialize spaCy and add the SpacyTextBlob pipeline\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe('spacytextblob')\n",
+    "\n",
+    "# Function to analyze sentiment and get polarity score\n",
+    "def analyze_sentiment_and_get_polarity(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "        \n",
+    "        # Handling both possible JSON structures\n",
+    "        if isinstance(data, list):\n",
+    "            poem_lines = data[0]['lines']\n",
+    "        else:\n",
+    "            poem_lines = data['lines'] if 'lines' in data else []\n",
+    "            \n",
+    "        poem_text = '\\n'.join(poem_lines)\n",
+    "        doc = nlp(poem_text)\n",
+    "        return doc._.polarity\n",
+    "\n",
+    "# List of song files\n",
+    "song_files = [\"hello_lyrics.json\", \"love_story_lyrics.json\", \"shape_of_you_lyrics.json\"]\n",
+    "\n",
+    "# Analyze sentiment and print polarity scores\n",
+    "for file_name in song_files:\n",
+    "    polarity_score = analyze_sentiment_and_get_polarity(file_name)\n",
+    "    print(f\"Polarity Score for '{file_name}': {polarity_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "f832355a-b5ea-4298-b400-e76592ced88a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity Score for 'hello_lyrics.json': 0.0\n",
+      "Polarity Score for 'love_story_lyrics.json': 0.0\n",
+      "Polarity Score for 'shape_of_you_lyrics.json': 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "import json\n",
+    "\n",
+    "# Initialize spaCy and add the SpacyTextBlob pipeline\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe('spacytextblob')\n",
+    "\n",
+    "# Function to analyze sentiment and get polarity score\n",
+    "def analyze_sentiment_and_get_polarity(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "        \n",
+    "        # Handling both possible JSON structures\n",
+    "        if isinstance(data, list):\n",
+    "            poem_lines = data[0]['lines']\n",
+    "        else:\n",
+    "            poem_lines = data['lines'] if 'lines' in data else []\n",
+    "            \n",
+    "        poem_text = '\\n'.join(poem_lines)\n",
+    "        doc = nlp(poem_text)\n",
+    "        return doc._.polarity\n",
+    "\n",
+    "# List of song files with updated names\n",
+    "song_files = [\"hello_lyrics.json\", \"love_story_lyrics.json\", \"shape_of_you_lyrics.json\"]\n",
+    "\n",
+    "# Analyze sentiment and print polarity scores\n",
+    "for file_name in song_files:\n",
+    "    polarity_score = analyze_sentiment_and_get_polarity(file_name)\n",
+    "    print(f\"Polarity Score for '{file_name}': {polarity_score}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "019c24bf-bc99-4d7c-845a-9f77ab2c0dd9",
+   "id": "ac57f770-ca83-497b-b7ed-736b7728897b",
    "metadata": {},
    "outputs": [],
    "source": []
